--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ permalink: pretty
 
 gems: [jekyll-paginate]
 
-url: https://pixelbar.nl
-enforce_ssl: pixelbar.nl
+# url: https://pixelbar.nl
+# enforce_ssl: pixelbar.nl
 
 # Setup
 title:               pixelbar
