--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ permalink: pretty
 exclude: [vendor]
 
 gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 
 # url: https://pixelbar.nl
 # enforce_ssl: pixelbar.nl
